WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91840
[EFL] Fix build when protocol handler and custom scheme is disabled
https://bugs.webkit.org/show_bug.cgi?id=91840
Summary
[EFL] Fix build when protocol handler and custom scheme is disabled
Thiago Marcos P. Santos
Reported
2012-07-20 02:11:20 PDT
Misplacement of a namespace closing bracket.
Attachments
Patch
(1.41 KB, patch)
2012-07-20 03:28 PDT
,
Thiago Marcos P. Santos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Thiago Marcos P. Santos
Comment 1
2012-07-20 03:28:23 PDT
Created
attachment 153465
[details]
Patch
WebKit Review Bot
Comment 2
2012-07-20 07:11:32 PDT
Comment on
attachment 153465
[details]
Patch Clearing flags on attachment: 153465 Committed
r123213
: <
http://trac.webkit.org/changeset/123213
>
WebKit Review Bot
Comment 3
2012-07-20 07:11:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug