[EFL] Fix build when protocol handler and custom scheme is disabled https://bugs.webkit.org/show_bug.cgi?id=91840

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-07-20
Reviewed by Kenneth Rohde Christiansen.

Fixed namespace closing bracket positioning.

* WebCoreSupport/RegisterProtocolHandlerClientEfl.cpp:
(WebCore):

Canonical link: https://commits.webkit.org/109671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123213 268f45cc-cd09-0410-ab3c-d52691b4dbfc